--- a/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/index.html
+++ b/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/index.html
@@ -3,11 +3,11 @@
        <head>
               <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-   			  <script src="resources/sap-ui-core.js"
-                      id="sap-ui-bootstrap"
-                      data-sap-ui-libs="sap.ui.commons"
-                      data-sap-ui-theme="sap_goldreflection" >
-   			  </script>
+			  <script src="resources/sap-ui-core.js"
+			          id="sap-ui-bootstrap"
+			          data-sap-ui-libs="sap.ui.commons,sap.ui.table"
+			          data-sap-ui-theme="sap_goldreflection" >
+			  </script>
               <!-- add sap.ui.table,sap.ui.ux3 and/or other libraries to 'data-sap-ui-libs' if required -->
 
    			  <script>
