--- a/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/index.html
+++ b/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/index.html
@@ -11,9 +11,19 @@
               <!-- add sap.ui.table,sap.ui.ux3 and/or other libraries to 'data-sap-ui-libs' if required -->
 
    			  <script>
-                     sap.ui.localResources("e2e-nwcloud-app-persons-list-web-orig");
-                     var view = sap.ui.view({id:"idpersonsdata1", viewName:"e2e-nwcloud-app-persons-list-web-orig.personsdata", type:sap.ui.core.mvc.ViewType.JS});
-   			         view.placeAt("content");
+	   			  var relativeOdataServiceUrl = "/e2e-nwcloud-app-persons-list-web-orig/jpa.svc";
+	   			  var personsListOdataServiceUrl = getServiceUrl(relativeOdataServiceUrl);
+	
+	   			  function getServiceUrl(sServiceUrl) {
+	   			    var sOrigin = window.location.protocol + "//"
+	   			                  + window.location.hostname
+	   			                  + (window.location.port ? ":" + window.location.port : "");
+	   			    return sOrigin + sServiceUrl;
+	   			  }
+	   			  
+	   			  sap.ui.localResources("e2e-nwcloud-app-persons-list-web-orig");
+	                     var view = sap.ui.view({id:"idpersonsdata1", viewName:"e2e-nwcloud-app-persons-list-web-orig.personsdata", type:sap.ui.core.mvc.ViewType.JS});
+	   			         view.placeAt("content");
    			  </script>
 
        </head>
